<resources>
    <string name="app_name">Calculator</string>
    <string name="txtClear">C</string>
    <string name="txtRemoveDigit">del</string>
    <string name="txtDivision">/</string>
    <string name="txt7">7</string>
    <string name="txt8">8</string>
    <string name="txt9">9</string>
    <string name="txt4">4</string>
    <string name="txt5">5</string>
    <string name="txt6">6</string>
    <string name="txt1">1</string>
    <string name="txt2">2</string>
    <string name="txt3">3</string>
    <string name="txtMultiplication">X</string>
    <string name="txtMinus">-</string>
    <string name="txtPlus">+</string>
    <string name="txtNegPos">+/-</string>
    <string name="txtDecimal">.</string>
    <string name="txt0">0</string>
    <string name="txtEqual">=</string>
    <string name="txtInput"></string>
    <string name="txtResult"></string>
    <string name="txtHidden"></string>
    <string name="txtPercent">%</string>
</resources>
